client/src/layout/Sidebar/Sidebar.module.css
/* Sidebar  */

#sidebar {
  height: 100%;
  background-color: #25282C;
  overflow-y: auto;
  width: 250px;
  height: 100vh;
}
.closeicon {
  color:var(--primary-green);
  margin-left: 30px;
  cursor: pointer;
}

.sidebartitle {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 15px 30px 0px 30px;
  margin-top: 15px;
  margin-bottom: 30px;
  transition: margin-left 0.5s ease; /* Added transition property for margin-left */

}

.sidebarbrand {
  font-size: 20px;
  font-weight: 700;
  color: white;
}

.sidebarList {
  padding: 0;
  list-style-type: none;
  transition: margin-left 0.5s ease; /* Added transition property for margin-left */

}

.sidebarListItem {
  padding: 20px 20px 20px 20px;
  font-size: 18px;
  display: flex;
  gap: 16px;
  align-items: center;
}

.sidebarListItem:hover {
  background-color: #49837D;
  cursor: pointer;
}

.sidebarListItem > a {
  text-decoration: none;
  color:white;
}
a{
  color:white;
}

.sidebarResponsive {
  display: inline !important;
  position: absolute;
  transition: max-height 0.5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;

  /*
    we want the z-index of the sidebar higher so that
    the charts are not showing over the sidebar 
    on small screens
  */
  z-index: 12 !important;
}

  /* Medium <= 992px */
  
@media screen and (max-width: 992px) {
  #sidebar {
    display: none;
  }
  .menu-icon {
    display: block;
  }

  .sidebartitle > span {
    display: flex;
    align-items: center;
  }
}

/* Extra Small <= 576px */

@media screen and (max-width: 576px) {
  .hedaer-left {
    display: none;
  }
}

.icon {
  font-size: 20px;
  color:var(--primary-green)
}

